--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -30,14 +30,34 @@ jobs:
     - name: Build release binary
       run: cargo make build
 
-    # Upload to GitHub pages and deploy!
+    # Upload it to pages
     - name: Upload GitHub Pages artifact
       uses: actions/upload-pages-artifact@v3.0.1
       with:
+        # Artifact name
         name: github-pages
         path: wasm-target/
-    - name: Deploy GitHub Pages site
-      uses: actions/deploy-pages@v4.0.5
-      with:
-        artifact_name: github-pages
 
+  # Doing it like they say to, hope it doesn't change!
+  # https://github.com/actions/deploy-pages?tab=readme-ov-file#usage
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
+        id: deployment
+        with:
+          artifact_name: wasm-target
