--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -2,7 +2,7 @@ name: "Build and Deploy"
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 env:
   CARGO_TERM_COLOR: always
@@ -12,31 +12,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # Get me!
-    - uses: actions/checkout@v4
+      # Get me!
+      - uses: actions/checkout@v4
 
-    # Rust setup stuff
-    - name: Handle rust caching
-      uses: Swatinem/rust-cache@v2
-    - name: Setup Rust toolchain
-      uses: dtolnay/rust-toolchain@nightly
-      with:
-        toolchain: nightly
-        targets: wasm32-unknown-unknown
-    - name: Download cargo make binary
-      uses: davidB/rust-cargo-make@v1
+      # Rust setup stuff
+      - uses: Swatinem/rust-cache@v2
+      - uses: dtolnay/rust-toolchain@nightly
+        with:
+          toolchain: nightly
+          targets: wasm32-unknown-unknown
+      - name: Install cargo make
+        run: cargo install make
 
-    # Build the game
-    - name: Build release binary
-      run: cargo make build
+      # Build the game
+      - name: Build release binary
+        run: cargo make build
 
-    # Upload it to pages
-    - name: Upload GitHub Pages artifact
-      uses: actions/upload-pages-artifact@v3.0.1
-      with:
-        # Artifact name
-        name: github-pages
-        path: wasm-target/
+      # Upload it to pages
+      - uses: actions/upload-pages-artifact@v4
+        with:
+          # Artifact name
+          name: github-pages
+          path: wasm-target/
 
   # Doing it like they say to, hope it doesn't change!
   # https://github.com/actions/deploy-pages?tab=readme-ov-file#usage
@@ -46,8 +43,8 @@ jobs:
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
+      pages: write # to deploy to Pages
+      id-token: write # to verify the deployment originates from an appropriate source
     # Deploy to the github-pages environment
     environment:
       name: github-pages
@@ -56,8 +53,7 @@ jobs:
     # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
         id: deployment
         with:
-          artifact_name: wasm-target
+          artifact_name: github-pages
