--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 [dependencies]
 bevy = "0.14.2"
 bevy_wasm_window_resize = "0.4.0"
+iyes_progress = "0.12.0"
+
+[dependencies.bevy_asset_loader]
+version = "0.21.0"
+features = ["2d", "progress_tracking"]
