--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,16 @@ iyes_progress = "0.12.0"
 [dependencies.bevy_asset_loader]
 version = "0.21.0"
 features = ["2d", "progress_tracking"]
+
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release-wasm]
+inherits = "release"
+codegen-units = 1
+opt-level = "s"
