--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.14.2"
-bevy_wasm_window_resize = "0.4.0"
 iyes_progress = "0.12.0"
+wasm-bindgen = "0.2.93"
+web-sys = "0.3.70"
+js-sys = "0.3.70"
 
 [dependencies.bevy_asset_loader]
 version = "0.21.0"
