--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,9 @@ features = ["2d", "progress_tracking"]
 git = "https://github.com/Leafwing-Studios/leafwing-input-manager"
 rev = "cd50ba147978dfbc4e824fa0aa9695996b2caf13"
 
+[dev-dependencies]
+wasm-bindgen-test = "0.3.43"
+
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
